--- a/our.css
+++ b/our.css
@@ -16,13 +16,13 @@
 .editButton{
     border-radius: 50%; 
     border: 5px;
+    font-size:20px; 
+    
 }
 .selectUnit{
      width: 100%; height:36px;
 }
-.table, .th, .td {
+.tableBorder{
     border: 1px solid black;
 }
-.pd{
- border: 10px solid black;
-}
+
