--- a/our.css
+++ b/our.css
@@ -1,108 +1,106 @@
-.modalstyle{
-    width: 109%;
+.table, .th, .td {
+    border: 1px grey;
 }
-.headercolor{
-    background-color: dimgray;
-}
-.thead{
-    background-color: darkgray;
-    color: aliceblue;
+.pd{
+ border: 10px solid black;
 }
 
-.clearDueModal{
-    width: 122%;
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.inputpadding{
-    padding: 10px;
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-.inputmargin{
-    margin: 10px;
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
 }
 
-.tableBackground{
-    background-color:darkgrey;
-    color: floralwhite;
-}
-.iconPadding{
-    padding-top: 10px;
-    padding-right: 10px;
-}
-.modelTable{
-    background-color:darkgray; 
-    color: cornsilk;
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
 }
 
-.profilePic{
-    margin: 22px;
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
 }
 
-.projectButton{
-    border-radius: 50%;
-}
-.editButton{
-    border-radius: 50%; 
-    border: 5px;
-    font-size:20px;     
-}
-.selectUnit{
-     width: 100%; height:36px;
-}
-.tableBorder{
-    border: 1px solid black;
-}
-.span{
-    color: red;
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
 }
 
-.inputbox{
-    border-radius: 4px;
-    padding: 5px;
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+/* styles apply to button*/
+.styleforbut{
+    background:white;
+    color: white;
+    padding: 7px;
+    border: 2px solid grey;
+    border-radius: 5%;
+    margin-left: 85%;
+    margin-bottom: 10px;
+}
+#main-wrapper > div > div.container-fluid > div > div > button > a{
+    color: darkblue;
+}
+.styleforbut:hover{
+    background:#eee;
+    color: white;
+    padding: 7px;
+    border: 2px solid grey;
+    border-radius: 5%;
+    margin-left: 85%;
+      margin-bottom: 10px;
 }
 
-.modalstyle{
-    width: 109%;
-}
-.headercolor{
-    background-color: dimgray;
-}
-.thead{
-    background-color: dimgray;
-    color: aliceblue;
+
+/*
+.modal-header {
+    padding: 2px 16px;
+    background-color:darkblue;
+    color: white;
 }
 
-.clearDueModal{
-    width: 122%;
-}
+.modal-body {padding: 2px 16px;}
 
-.inputpadding{
-    padding: 10px;
+.modal-footer {
+    padding: 2px 16px;
+    background-color:darkblue;
+    color: white;
 }
-
-.tableBackground{
-    background-color:darkgrey;
-    color: floralwhite;
-}
-.iconPadding{
-    padding-top: 10px;
-    padding-right: 10px;
-}
-.modelTable{
-    background-color:darkgray; 
-    color: cornsilk
-}
-.projectButton{
-    border-radius: 50%;
-}
-.editButton{
-    border-radius: 50%; 
-    border: 5px;
-    font-size:20px;     
-}
-.selectUnit{
-     width: 100%; height:36px;
-}
-.tableBorder{
-    border: 1px solid black;
-}
+*/
